--- a/public/app/scss/theme/_sidebar.scss
+++ b/public/app/scss/theme/_sidebar.scss
@@ -78,6 +78,7 @@
             font-weight:300;
             font-size:12px;
             .lnr{
+                padding: 4px 8px;
                 margin-right:10px;
                 font-weight:700;                        
             }
